# ccp-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: plot_results.py
src/: events.h  main.cpp  parameters.cpp  parameters.h  reactions.cpp  reactions.h  simulation.cpp  simulation.h  simulation_events.cpp  simulation_events.h
